fixed the spelling mistakes for the comments

--- a/EDA-titanic-practice.ipynb
+++ b/EDA-titanic-practice.ipynb
@@ -2918,7 +2918,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "91cbe938",
+   "id": "3621ec24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2928,7 +2928,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "55066efe",
+   "id": "b47c1dde",
    "metadata": {},
    "outputs": [
     {
@@ -3082,7 +3082,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "d07804a1",
+   "id": "4a23ace4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3093,7 +3093,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "70cc57c6",
+   "id": "3db12d96",
    "metadata": {},
    "outputs": [
     {
@@ -3161,7 +3161,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "86321b32",
+   "id": "403ec05f",
    "metadata": {},
    "outputs": [
     {
@@ -3245,7 +3245,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "652e90cf",
+   "id": "f1b8c000",
    "metadata": {},
    "outputs": [
     {
@@ -3337,7 +3337,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3e1f8c1a",
+   "id": "d240a656",
    "metadata": {},
    "outputs": [
     {
@@ -3362,7 +3362,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "406f0193",
+   "id": "8ba8d8de",
    "metadata": {},
    "outputs": [
     {
@@ -3387,7 +3387,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "508552ee",
+   "id": "418e30c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3398,7 +3398,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a2f3fd75",
+   "id": "5e3197bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3409,7 +3409,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2b9aa19c",
+   "id": "802b6a43",
    "metadata": {},
    "outputs": [
     {
@@ -3433,7 +3433,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "976a9021",
+   "id": "2b551dcb",
    "metadata": {},
    "outputs": [
     {
@@ -3454,7 +3454,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "f0281354",
+   "id": "7fb3b0e7",
    "metadata": {},
    "outputs": [
     {
@@ -3488,7 +3488,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "82c1813a",
+   "id": "039c9494",
    "metadata": {},
    "outputs": [
     {
@@ -3517,21 +3517,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aef0307",
+   "id": "1cca2694",
    "metadata": {},
    "source": [
     "# from confusion\n",
-    "* the rown first the represents the guesses for first class(i.e  survived)\n",
+    "* the first row represents the guesses for first class(i.e  survived)\n",
     "* second row represents the 2nd class ( i.e did not survived)\n",
-    "* if first row we can see our model predicted 134 would survived and 134 survived , but it also said 34 survived but in reality the did not survived. which in short we could say. 134 correct guesses for Survived and 34 wrong guesses\n",
+    "* In first row we can see our model predicted 134 would survived and 134 survived , but it also said 34 survived, but in reality the did not survived. Which in short we could say. 134 correct guesses for Survived and 34 wrong guesses\n",
     "\n",
-    "* while in 2nd row we can see, our model predicted 66 did not survived and it was was correct. but it also said 34 didnot survived but in reality they did survive. In short 66 correct guesses and 34 wrong guess for people who did not survive.\n"
+    "* while in 2nd row we can see, our model predicted 66 did not survived, and it was was correct. but it also said 34 didnot survived but in reality they did survive. In short 66 correct guesses and 34 wrong guess for people who did not survive.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b12a19f4",
+   "id": "1bc74bee",
    "metadata": {},
    "outputs": [],
    "source": []
